# snake-ai

./: .gitignore  README.md  myAI.py  pyproject.toml  score.txt  smartAI.py
.github/: submit.py
.github/workflows/: compete.yml
examples/: dumbAI.py
snake/: __init__.py  difficulties.yaml  logic.py  render.py  run.py  snake.py  test.py
src/game_clone/: patch.py
